--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <link rel="shortcut icon" href="http://github.com/rubinovk/integration-faults/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/rubinovk/integration-faults">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/rubinovk/integration-faults/zipball/master">ZIP</a></li>
+<!--          <li class="downloads"><a href="https://github.com/rubinovk/integration-faults/zipball/master">ZIP</a></li>
           <li class="downloads"><a href="https://github.com/rubinovk/integration-faults/tarball/master">TAR</a></li>
           <li class="title">DOWNLOADS</li>
+-->
         </nav>
       </div><!-- end header -->
 
@@ -40,8 +41,6 @@
 
         <h1>Integration Faults</h1>
 
-<h3>This is a point to share and collect <a href="https://github.com/rubinovk/integration-faults/tree/master/examples">examples</a> of integration faults for the common good.</h3>
-
 <p><strong>Integration faults</strong> are like zombies: some people think they exist, bring a<br>
 lot of harm, shall be hunted down and destroyed.  Others think they exist<br>
 only on TV and one can just unit test their code and sleep easy.  </p>
@@ -50,8 +49,6 @@ only on TV and one can just unit test their code and sleep easy.  </p>
 integration faults.  </p>
 
 <h3><a href="https://github.com/rubinovk/integration-faults/wiki">Go to the Wiki section to learn more and share your experience.</a></h3>
-
-<hr><p>Project home page: <a href="http://rubinovk.github.com/integration-faults/">http://rubinovk.github.com/integration-faults/</a></p>
       </section>
 
     </div>
