--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         
         <hr>
     </section>
+    <div id="footer">
+        <hr>
+        <p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Integration-faults</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://rubinovk.github.com/integration-faults/" property="cc:attributionName" rel="cc:attributionURL">Konstantin Rubinov</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a></p>
+    </div>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
